@@ -1,8 +1,15 @@
 
 * Prio 1
 
+- splitter should have default width on Windows/Linux
+- handle out of memory when running on Windows (debugging)
+- rule FloatingPointLiteral of java.g is not displayed correctly (ANTLR optimization problem)
+- windows: offset of +1 when highliting tokens in debugger input pane
+- windows: make background of list white on Windows/Linux
+
 - terminer les detachable panels
 - terminate "getExportableGView" method in Debugger
+- test detachable panels on Windows/Linux
 - do not analyze grammar when debugging in local
 - dot on Windows is usually located in "c:\Program Files\ATT\Graphviz\bin\dot.exe
 
