@@ -8,6 +8,7 @@ Version 1.0ea12 -
   not in the same line as the colon
 - do not analyze the grammar when debugging remotely
 - mark the grammar as dirty if the file is modified outside ANTLRWorks
+- resize view when graphic elements are moved (DFA decision, etc)
 - fixed a bug that would prevent small error paths from being displayed in the syntax diagram
 - fixed a bug where performing some menu commands would failed on Windows/Linux (mostly cut and paste)
 
